<resources>
    <string name="app_name">BrokerChain Wallet</string>
    <string name="welcome_text">BrokerChain Wallet</string>
    <string name="create_wallet">Create a Wallet</string>
    <string name="import_wallet">Import existing wallet</string>
    <string name="import_existing_wallet">Import existing wallet?</string>
    <string name="description_text">Connecting to the decentralized world</string>
    <string name="use_secret_phrase">Using a Secret Recovery Phrase</string>
    <string name="get_started">Get started</string>
    <string name="broker">Get started</string>
    <string name="medal_ranking">Medal Ranking</string>
    <string name="proof_submission">Proof Submission</string>
    <string name="nft_view">NFT Gallery</string>
    <string name="nft_minting">Mint NFT</string>
    <string name="loading">Loading...</string>
    <string name="load_failed">Load Failed</string>
    <string name="network_error">Network Error</string>
    <string name="data_parse_error">Data Parse Error</string>
    <string name="submit_proof">Submit Proof</string>
    <string name="mint_nft">Mint NFT</string>
    <string name="select_file">Select File</string>
    <string name="select_image">Select Image</string>
    <string name="no_file_selected">No File Selected</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="my_nfts">My NFTs</string>
    <string name="all_nfts">All NFTs</string>
    <string name="medal_system">Medal System</string>
    <string name="proof_and_nft">Proof &amp; NFT</string>
    <string name="Hidden_Account">Hidden Accounts (%1$d)</string>
    <string name="Account">Account %d</string>
    <string name="Address_0x">0x %s</string>
    <string name="BKC">%s BKC </string>
    <string name="Old_Account_Warning">"The old account type is no longer valid! Please upgrade immediately."</string>
    <string name="Old_Account_Warning_MainPage_FirstLine">"The old account type is no longer valid!."</string>
    <string name="Old_Account_Warning_MainPage_SecondLine">"Please upgrade your account on the Dashboard or Miner Client."</string>
    <string name="Empty_Account_Warning">"No available accounts"</string>
    <string name="Exit_Confirm">你确定要退出应用吗？</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Wrong_Password_Warning">Wrong Password</string>
</resources>

